# agentx-tau2-purple

./: .gitignore  AGENTS.md  CHANGES_SUMMARY.md  CLAUDE.md  Dockerfile  README.md  RUN_TESTS.md  agent.py  amber-manifest.json5  analyze_results.py  pyproject.toml  run.sh  run_failed_tasks.sh
.github/workflows/: test-and-publish.yml
downloads/: job_logs.txt
scripts/: replay_log_smoke.py  run_airline_eval.py
src/: __init__.py  agent.py  executor.py  extractors.py  forced_execution.py  guard.py  intent.py  intent_llm.py  parsing.py  planner.py  playbooks.py  policy_gate.py  policy_sanitizer.py  reservation.py  runtime.py  server.py  session_state.py  skill_loader.py
src/skills/: baggage.md  booking.md  cancel.md  general.md  modify.md  status.md
tests/: conftest.py  test_agent.py  test_agent_logic.py  test_examples.py  test_failed_task_regressions.py  test_live_problem_replays.py
